--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ body {
 .date {
   color: #aaa;
   font-size: 14px;
+
   letter-spacing: 0.3px;
   text-transform: uppercase;
 }
@@ -129,6 +130,7 @@ body {
   background-color: var(--primary-color);
   color: var(--secondary-color);
   border-radius: 50%;
+  margin: 10px;
   height: 18px;
   width: 18px;
   display: inline-flex;
